KOGITO-1693: Replace Float constructor with Float.valueOf (#180) (#204)
For more details see https://issues.redhat.com/browse/KOGITO-1693